--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,35 @@
 {
-    "exclude": ["./test/", "./node_modules/", "./dist/"],
+    "exclude": [
+        "node_modules",
+        "build",
+        "dist",
+        "scripts",
+        "acceptance-tests",
+        "webpack",
+        "test",
+        "jest",
+        "src/setupTests.ts"
+    ],
     "compilerOptions": {
         "esModuleInterop": true,
-        "module": "ES2015",
+        "baseUrl": ".",
+        "outDir": "build/dist",
+        "module": "esnext",
+        "lib": ["es6", "dom"],
+        "sourceMap": true,
+        "allowJs": true,
+        "jsx": "react",
         "moduleResolution": "node",
-        "target": "ES6"
+        "target": "es6",
+        "rootDir": "src",
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "noUnusedLocals": true,
+        "allowSyntheticDefaultImports": true,
+        "downlevelIteration": true
     }
 }
