--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 RPC_URL="http://localhost:26657"
+REST_URL="http://localhost:1317"
 FAUCET_URL="http://localhost:4500"
 MNEMONIC_TEST_ALICE="theory arrow blue much illness carpet arena thought clay office path museum idea text foot bacon until tragic inform stairs pitch danger spatial slight"
 ADDRESS_TEST_ALICE="cosmos1fx6qlxwteeqxgxwsw83wkf4s9fcnnwk8z86sql"
