--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "react-app-rewired build",
         "test-react": "react-app-rewired test --env=jsdom",
         "eject": "react-scripts eject",
-        "deploy": "ren .\\build\\index.html 200.html & surge .\\build"
+        "deploy": "ren .\\build\\index.html 200.html & surge .\\build",
+        "indexer-dev": "npx ts-node src/server/index.ts"
     },
     "repository": {
         "type": "git",
@@ -23,6 +24,7 @@
     "dependencies": {
         "@cosmjs/stargate": "0.28.11",
         "bootstrap": "5.1.3",
+        "express": "4.18.1",
         "jquery": "3.3.1",
         "lockr": "0.8.4",
         "protobufjs": "7.0.0",
@@ -39,6 +41,7 @@
         "@keplr-wallet/types": "0.11.51",
         "@types/chai": "4.3.3",
         "@types/dotenv": "8.2.0",
+        "@types/express": "4.17.13",
         "@types/lockr": "0.8.6",
         "@types/mocha": "9.1.1",
         "@types/node": "18.7.5",
